--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,3 +3,6 @@ titleMainPage=Aprovações - Central
 titleDetailPage=Aprovações - Central (Itens)
 appTitle=Aprovações - Central
 appDescription=App Aplicativo para Aprovações - Central
+finalizapedido=Conclui Pedido
+pedido_status=Pedido criado(s) {0} de {1}
+pedidoCriacao=Pedido(s) em criação
